@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-07T08:12:48Z",
+  "timestamp" : "2022-09-08T16:09:14Z",
   "count_outdated" : 52,
   "uniques_outdated" : 19,
-  "count" : 61,
-  "uniques" : 25,
+  "count" : 64,
+  "uniques" : 26,
   "views" : [
     {
       "timestamp": "2022-08-25T00:00:00Z",
@@ -44,6 +44,13 @@
       "timestamp": "2022-09-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-08T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
