@@ -1,6 +1,6 @@
 {
-  "count": 9,
-  "uniques": 6,
+  "count": 12,
+  "uniques": 7,
   "views": [
     {
       "timestamp": "2022-08-25T00:00:00Z",
@@ -30,6 +30,11 @@
     {
       "timestamp": "2022-09-05T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-08T00:00:00Z",
+      "count": 3,
       "uniques": 1
     }
   ]
