@@ -1,3 +1,11 @@
+2022-09-08T16:09:14Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3016594994
+* notice: last 14d: unq all: 7 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 19 52 / 25 61
+* notice: next accum: outdated-unq outdated-all / unq all: 19 52 / 26 64
+* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [] / [2022-09-08]
+
 2022-09-07T08:12:48Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3006036836
 * notice: last 14d: unq all: 6 9
